# llvm-project

./: .gitignore  BUILD.bazel  WORKSPACE
clang-tools-extra/clang-tidy/: BUILD.bazel
clang-tools-extra/clang-tidy/abseil/: BUILD.bazel
clang-tools-extra/clang-tidy/android/: BUILD.bazel
clang-tools-extra/clang-tidy/boost/: BUILD.bazel
clang-tools-extra/clang-tidy/bugprone/: BUILD.bazel
clang-tools-extra/clang-tidy/cert/: BUILD.bazel
clang-tools-extra/clang-tidy/cppcoreguidelines/: BUILD.bazel
clang-tools-extra/clang-tidy/fuchsia/: BUILD.bazel
clang-tools-extra/clang-tidy/google/: BUILD.bazel
clang-tools-extra/clang-tidy/hicpp/: BUILD.bazel
clang-tools-extra/clang-tidy/linuxkernel/: BUILD.bazel
clang-tools-extra/clang-tidy/llvm/: BUILD.bazel
clang-tools-extra/clang-tidy/misc/: BUILD.bazel
clang-tools-extra/clang-tidy/modernize/: BUILD.bazel
clang-tools-extra/clang-tidy/objc/: BUILD.bazel
clang-tools-extra/clang-tidy/openmp/: BUILD.bazel
clang-tools-extra/clang-tidy/performance/: BUILD.bazel
clang-tools-extra/clang-tidy/portability/: BUILD.bazel
clang-tools-extra/clang-tidy/readability/: BUILD.bazel
clang-tools-extra/clang-tidy/tool/: BUILD.bazel
clang-tools-extra/clang-tidy/zircon/: BUILD.bazel
clang/lib/AST/: BUILD.bazel
clang/lib/ASTMatchers/: BUILD.bazel
clang/lib/Basic/: BUILD.bazel
llvm/include/llvm/Support/: BUILD.bazel
llvm/lib/Support/: BUILD.bazel
