cc_binary(
    name = "clang_tidy",
    srcs = glob(["*.cpp"]),
    deps = [
        "//clang/lib/AST",
        "//clang/lib/ASTMatchers",
        "//clang/lib/Basic",
        "//clang-tools-extra/clang-tidy:Tidy",
        "//clang-tools-extra/clang-tidy/android:AndroidModule",
        "//clang-tools-extra/clang-tidy/abseil:AbseilModule",
        "//clang-tools-extra/clang-tidy/boost:BoostModule",
        "//clang-tools-extra/clang-tidy/bugprone:BugproneModule",
        "//clang-tools-extra/clang-tidy/cert:CERTModule",
        "//clang-tools-extra/clang-tidy/cppcoreguidelines:CppCoreGuidelinesModule",
        "//clang-tools-extra/clang-tidy/fuchsia:FuchsiaModule",
        "//clang-tools-extra/clang-tidy/google:GoogleModule",
        "//clang-tools-extra/clang-tidy/hicpp:HICPPModule",
        "//clang-tools-extra/clang-tidy/linuxkernel:LinuxKernelModule",
        "//clang-tools-extra/clang-tidy/llvm:LLVMModule",
        "//clang-tools-extra/clang-tidy/misc:MiscModule",
        "//clang-tools-extra/clang-tidy/modernize:ModernizeModule",
        "//clang-tools-extra/clang-tidy/objc:ObjCModule",
        "//clang-tools-extra/clang-tidy/openmp:OpenMPModule",
        "//clang-tools-extra/clang-tidy/performance:PerformanceModule",
        "//clang-tools-extra/clang-tidy/portability:PortabilityModule",
        "//clang-tools-extra/clang-tidy/readability:ReadabilityModule",
        "//clang-tools-extra/clang-tidy/zircon:ZirconModule",
    ],
    visibility = ["//visibility:public"],
)
